# BIDSonym

./: .flake8  AUTHORS.rst  Dockerfile  README.rst  generate_images.sh  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml  code-style.yml  code-style.yml.yml  docker.yml  test.yml
bidsonym/: __init__.py  _checks.py  _logs.py  _version.py  brainextraction.py  commands.py  deeid.py  defacing_algorithms.py  reports.py  run_deeid.py  utils.py
bidsonym/tests/: test_deeid.py
docs/source/: conf.py
